5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4383/executions/1577_1328.log
== TEST (2019-03-19 19:15:07) 
-- CODE:
area=20x35
print(area)
-- ERROR:
File "XXXX", line 1
    area=20x35
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:15:25) 
-- CODE:
area=20.35
print(area)
-- OUTPUT:
20.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 19:15:31) 
-- CODE:
area=20.35
print(area)
-- EXECUTION TIME:
0.140402
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
20.35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:15:38) 
-- CODE:
area=20.x35
print(area)
-- ERROR:
File "XXXX", line 1
    area=20.x35
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:15:42) 
-- CODE:
area=20.35
print(area)
-- OUTPUT:
20.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:17:46) 
-- CODE:
area=20/35
print(area)
-- OUTPUT:
0.5714285714285714
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:17:52) 
-- CODE:
area=20./35
print(area)
-- OUTPUT:
0.5714285714285714
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:18:13) 
-- CODE:
area=20*35
print(area)
-- OUTPUT:
700
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 19:18:17) 
-- CODE:
area=20*35
print(area)
-- EXECUTION TIME:
0.134485
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
